--- a/recipes/style.css
+++ b/recipes/style.css
@@ -6,8 +6,6 @@
     font-family: Arial, Helvetica, sans-serif "Times New Romans";
   }
   
-  
-
  /* doughnut page */
 
  #doughnut-page {
@@ -20,11 +18,11 @@
 }
  .title, .steps, .ingredients {
   color: blue;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif, 'Times New Roman';
 }
 
-p, .olist {
-  font-family: Arial, Helvetica, sans-serif; /* olist */
+p, .olist, .ulist {
+  font-family: monospace, Arial, Helvetica, sans-serif, 'Times New Roman', serif; /* doughnut and Marghi page */
 }
 
   .doughnut {
@@ -41,7 +39,4 @@ p, .olist {
 .m-title, .m-ingredients, .m-steps {
   color: red;
   font-family: Arial, verdana, tahoma, sans-serif;
-}
-p, .ulist {
-  font-family: monospace, 'Courier New', Courier, 'lucida console'; /* ulist */
 }
