--- a/recipes/style.css
+++ b/recipes/style.css
@@ -4,6 +4,11 @@
     color: brown;
     background-color: rgba(0, 0, 255, 0.1);
     font-family: Arial, Helvetica, sans-serif "Times New Romans";
+    padding: 20px;
+    margin: 60px;
+    border: 10px solid blue;
+    height: 50px;
+    width: 500px;
   }
   
  /* doughnut page */
