--- a/recipes/style.css
+++ b/recipes/style.css
@@ -22,8 +22,8 @@
   font-family: Arial, Helvetica, sans-serif, 'Times New Roman';
 }
 
-p, .olist, .ulist {
-  font-family: monospace, Arial, Helvetica, sans-serif, 'Times New Roman', serif; /* doughnut and Marghi page */
+p, .list {
+  font-family: Arial, Helvetica, sans-serif, 'Times New Roman', serif; /* For all the recipes pages */
 }
 
   .doughnut {
