--- a/recipes/style.css
+++ b/recipes/style.css
@@ -23,11 +23,11 @@
 }
 
 p, .list {
-  font-family: Arial, Helvetica, sans-serif, 'Times New Roman', serif; /* For all the recipes pages */
+  font-family: Arial, Helvetica, sans-serif, 'Times New Roman', serif; /* For all the recipe pages */
 }
 
-  .doughnut {
-    height: auto;
+  .doughnut, .sauce {
+    height: auto;      /* Resize image */
     width: 350px;
   }
 
@@ -38,6 +38,6 @@ p, .list {
   font-family: Arial, Helvetica, sans-serif, 'Times New Roman', Times;
 }
 .m-title, .m-ingredients, .m-steps {
-  color: blue;
+  color: darkred;
   font-family: Arial, verdana, tahoma, sans-serif;
 }
